<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_viewBinding"
        style="@style/HomepageButtonStyle"
        android:text="@string/viewBinding"
        app:layout_constraintBottom_toTopOf="@+id/btn_viewModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_viewModel"
        style="@style/HomepageButtonStyle"
        android:text="@string/viewModel"
        app:layout_constraintBottom_toTopOf="@+id/btn_viewModel_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewBinding" />

    <Button
        android:id="@+id/btn_viewModel_fragment"
        style="@style/HomepageButtonStyle"
        android:text="@string/viewModel_multiFragment"
        app:layout_constraintBottom_toTopOf="@+id/btn_live_data_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewModel" />

    <Button
        android:id="@+id/btn_live_data_timer"
        style="@style/HomepageButtonStyle"
        android:text="@string/liveData"
        app:layout_constraintBottom_toTopOf="@+id/btn_live_data_multi_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewModel_fragment" />

    <Button
        android:id="@+id/btn_live_data_multi_fragment"
        style="@style/HomepageButtonStyle"
        android:text="@string/liveData_multiFragment"
        app:layout_constraintBottom_toTopOf="@+id/btn_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_live_data_timer" />

    <Button
        android:id="@+id/btn_room"
        style="@style/HomepageButtonStyle"
        android:text="@string/room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_live_data_multi_fragment" />


</androidx.constraintlayout.widget.ConstraintLayout>